--- a/aws-instance-first-script/Jenkinsfile
+++ b/aws-instance-first-script/Jenkinsfile
@@ -32,6 +32,7 @@ pipeline {
 
         stage('Plan') {
             steps {
+                sh 'pwd;terraform -var keypem=${TF_VAR_keypem}'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform init -input=false'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform workspace new ${environment}'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform workspace select ${environment}'
