--- a/aws-instance-first-script/Jenkinsfile
+++ b/aws-instance-first-script/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
      environment {
         AWS_ACCESS_KEY_ID     = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
-        TF_VAR_keypem      = credentials("AWS_USER_KEY_PEM")
+        USER_KEYPEM      = credentials("AWS_USER_KEY_PEM")
     }
 
    agent  any
@@ -32,7 +32,7 @@ pipeline {
 
         stage('Plan') {
             steps {
-                sh 'pwd;terraform -var keypem=${TF_VAR_keypem}'
+                sh 'terraform plan -var region=${USER_KEYPEM}'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform init -input=false'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform workspace new ${environment}'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform workspace select ${environment}'
