--- a/aws-instance-first-script/Jenkinsfile
+++ b/aws-instance-first-script/Jenkinsfile
@@ -32,11 +32,11 @@ pipeline {
 
         stage('Plan') {
             steps {
-                sh 'terraform plan -var region=${USER_KEYPEM}'
+                
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform init -input=false'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform workspace new ${environment}'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform workspace select ${environment}'
-                sh "pwd;cd terraform/aws-instance-first-script ;terraform plan -input=false -out tfplan "
+                sh "pwd;cd terraform/aws-instance-first-script ;terraform plan -input=false -out tfplan  -var region=${USER_KEYPEM}"
                 sh 'pwd;cd terraform/aws-instance-first-script ;terraform show -no-color tfplan > tfplan.txt'
             }
         }
