--- a/aws-instance-first-script/Jenkinsfile
+++ b/aws-instance-first-script/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
      environment {
         AWS_ACCESS_KEY_ID     = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
-        TF_VAR_private_key      = credentials("PEM_TEXT")
+        TF_VAR_private_key      = credentials('PEM_TEXT')
     }
 
    agent  any
@@ -32,7 +32,8 @@ pipeline {
 
         stage('Plan') {
             steps {
-                
+                sh 'echo 1 TF_VAR_private_key'
+                sh 'echo 2 ${TF_VAR_private_key}'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform init -input=false'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform workspace new ${environment}'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform workspace select ${environment}'
