--- a/aws-instance-first-script/Jenkinsfile
+++ b/aws-instance-first-script/Jenkinsfile
@@ -12,6 +12,7 @@ pipeline {
         AWS_ACCESS_KEY_ID     = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
         TF_VAR_private_key      = credentials('PEM_TEXT')
+        TF_VAR_private_key_file = credentials('AWS_USER_KEY_PEM')
     }
 
    agent  any
@@ -32,12 +33,10 @@ pipeline {
 
         stage('Plan') {
             steps {
-                sh 'echo 1 TF_VAR_private_key'
-                sh 'echo 2 ${TF_VAR_private_key}'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform init -input=false'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform workspace new ${environment}'
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform workspace select ${environment}'
-                sh "pwd;cd terraform/aws-instance-first-script ; export TF_VAR_private_key; terraform plan -input=false -out tfplan"
+                sh "pwd;cd terraform/aws-instance-first-script ; export TF_VAR_private_key; export TF_VAR_private_key_file; terraform plan -input=false -out tfplan"
                 sh 'pwd;cd terraform/aws-instance-first-script ; terraform show -no-color tfplan > tfplan.txt'
             }
         }
