--- a/aws-instance-first-script/Jenkinsfile
+++ b/aws-instance-first-script/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         AWS_ACCESS_KEY_ID     = credentials('AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
         TF_VAR_private_key      = credentials('PEM_TEXT')
-        TF_VAR_private_key_file = credentials('AWS_USER_KEY_PEM')
+        TF_VAR_private_key_file = credentials('AWS_USER_KEY_PPK')
     }
 
    agent  any
