--- a/ansible-tomcat/tomcat.yml
+++ b/ansible-tomcat/tomcat.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Apache Tomcat10 using ansible
-  hosts: webserver
+  hosts: 34.240.10.40
   remote_user: ec2-user
   become: true
   tasks:
