--- a/ansible-tomcat/tomcat.yml
+++ b/ansible-tomcat/tomcat.yml
@@ -45,7 +45,7 @@
  
     - name: Copy Tomcat service from local to remote
       copy:
-        src: ansible-tomcat/tomcat.service
+        src: ansible-tomcat/ansible-tomcat/tomcat.service
         dest: /etc/systemd/system/
         mode: 0755
  
