--- a/ansible-tomcat/tomcat.service
+++ b/ansible-tomcat/tomcat.service
@@ -1,28 +1,26 @@
+# Systemd unit file for tomcat
 [Unit]
-Description=Tomcat - instance %i
+Description=Apache Tomcat Web Application Container
 After=syslog.target network.target
 
 [Service]
 Type=forking
 
-User=tomcat
-Group=tomcat
-
-WorkingDirectory=/var/tomcat/%i
-
-Environment="JAVA_HOME=/usr/lib/jvm/java-11-openjdk-11.0.13.0.8-1.amzn2.0.3.x86_64/"
-Environment="JAVA_OPTS=-Djava.security.egd=file:///dev/urandom"
-
-Environment="CATALINA_PID=/var/tomcat/%i/run/tomcat.pid"
-Environment="CATALINA_BASE=/var/tomcat/%i/"
-Environment="CATALINA_HOME=/opt/tomcat/"
-Environment="CATALINA_OPTS=-Xms512M -Xmx1024M -server -XX:+UseParallelGC"
+Environment=JAVA_HOME=/usr/lib/jvm/java-11-openjdk-11.0.13.0.8-1.amzn2.0.3.x86_64/
+Environment=CATALINA_PID=/opt/tomcat10/temp/tomcat.pid
+Environment=CATALINA_HOME=/opt/tomcat10
+Environment=CATALINA_BASE=/opt/tomcat10
+Environment='CATALINA_OPTS=-Xms512M -Xmx1024M -server -XX:+UseParallelGC'
+Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom'
 
 ExecStart=/opt/tomcat10/bin/startup.sh
-ExecStop=/opt/tomcat10/bin/shutdown.sh
+ExecStop=/bin/kill -15 $MAINPID
 
-#RestartSec=10
-#Restart=always
+User=tomcat
+Group=tomcat
+UMask=0007
+RestartSec=10
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
