--- a/ansible-tomcat/tomcat.yml
+++ b/ansible-tomcat/tomcat.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Apache Tomcat10 using ansible
-  hosts: {{ serverPublicIP }}
+  hosts: "{{ serverPublicIP }}"
   remote_user: ec2-user
   ansible_user: ec2-user 
   become: true
