--- a/ansible-tomcat/tomcat.yml
+++ b/ansible-tomcat/tomcat.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Apache Tomcat10 using ansible
-  hosts: "{{ serverPublicIP }}"
+  hosts: webservers
   remote_user: ec2-user
   become: true
   tasks:
